# Since surmise contains Cython code as a C Extension to the package contents,
# we are required to specify outside of setup.py (i.e., here) the requirements
# necessary for pip to construct a build system virtual environment and to build
# source distributions and wheels in it.
#
# Since setting the version is also part of building distributions, we also
# include here the version determination mechanism.
#
# All other information needed to compose the package itself is in setup.py in
# accord with the Cython docs.

[build-system]
requires = [
    "setuptools>=68.2.2",
    "setuptools_scm[toml]>=6.0",
    "numpy>=1.22.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "surmise/_version.py"
