# Since surmise contains a C Extension that uses the numpy C interface, we must
# specify outside of setup.py (i.e., here) the requirements necessary for build
# and pip to construct an isolated build system virtual environment with an
# appropriate version of numpy and to build source distributions and wheels in
# it.
#
# According to numpy docs, users can use 1.X numpy installations with binaries
# built with numpy >= 2.0.0.  The API and ABI are also supposed to be forward
# compatible until the API (and potentially the ABI) are intentionally broken
# at a minor or major release.  For now, we therefore build with numpy 2.0.0 so
# that we get the full expected compatibility.  This assume that newer versions
# of numpy haven't fixed bugs that affect surmise or improved surmise
# performance significantly.
#
# It is assumed that all .c files to be generated with Cython have already been
# generated and were created with respect to the same numpy target version that
# we use to compile the files here.
#
# Since setting the version is also part of building distributions, we also
# include here the version determination mechanism.
#
# All other information needed to compose the package itself is in setup.py in
# accord with the Cython docs.
#
# IMPORTANT
# * Please make sure that all dependence/version changes made here are reflected
#   in the documentation, tox.ini, and the like.

[build-system]
requires = [
    "setuptools>=68.2.2",
    "setuptools_scm[toml]>=6.0",
    "numpy==2.2.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "surmise/_version.py"
